--- a/style.css
+++ b/style.css
@@ -1,292 +1,384 @@
-body{
-	margin:0;
-	padding:0;
-	background:#fff;
-	font-family: 'Raleway',sans-serif;
-	color: #fff;
-}
-.banner{
-	height: 100vh;
-	width: 100%;
-	background:url('overlay.png'),url('./img/homepagephoto/1.jpg');
-	background-position: top;
-	background-size:cover;
-	/*background-attachment: fixed;*/
-	background-repeat: no-repeat;
-}
-.banner .navbar{
-	margin-top:4%;
-}
-.banner .navbar-brand{
-	color: #fff;
-	font-size:1.8em;
-	font-weight: 700;
-	margin-left: 10%;
-}
-.banner .nav{
-	margin-right:10%; 
-}
-.banner .nav li a{
-	color:#aaa;
-	font-size: 1.2em;
-}
-.banner .nav li a:hover{
-	color:rgb(232, 232, 232);
-	font-size: 1.2em;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+body,
+input,
+textarea {
+  font-family: "Poppins", sans-serif;
+}
 
-.banner .info{
-	margin-top:15%;
-	transform: translateY(-15%);
+.container {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  padding: 2rem;
+  background-color: #fafafa;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.banner .info h1{
-	font-size: 2.5em;
-	font-weight: 700;
-	color: #fff;
-	letter-spacing: 2px;
+
+.form {
+  width: 100%;
+  max-width: 820px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
-.banner .info p{
-	font-size: 2em;
-	font-weight: 500;
-	color: rgb(232, 232, 232);;
-	letter-spacing: 2px;
+
+.contact-form {
+  background-color: #586965;
+  position: relative;
 }
-.banner .info h3{
-  color:   rgb(232, 232, 232);
+
+.circle {
+  border-radius: 50%;
+  background: linear-gradient(135deg, transparent 20%, #586965);
+  position: absolute;
 }
-.banner .info a{
-	margin-left:50%;
-	transform: translateX(-50%);
-	color: #fff;
-	background: #464646;
-	padding:10px 20px; 
-	font-size: 2em;
-    font-weight: 600;
-    border-radius: 6%;
+
+.circle.one {
+  width: 130px;
+  height: 130px;
+  top: 130px;
+  right: -40px;
 }
-.banner .info a:hover{
-	background: #797979;
+
+.circle.two {
+  width: 80px;
+  height: 80px;
+  top: 10px;
+  right: 30px;
 }
-.row {
-	display: flex;
-	flex-wrap: wrap;
-	padding: 0 4px;
+
+.contact-form:before {
+  content: "";
+  position: absolute;
+  width: 26px;
+  height: 26px;
+  background-color:#586965;
+  transform: rotate(45deg);
+  top: 50px;
+  left: -13px;
+}
+
+form {
+  padding: 2.3rem 2.2rem;
+  z-index: 10;
+  overflow: hidden;
+  position: relative;
+}
+
+.title {
+  color: #fff;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1;
+  margin-bottom: 0.7rem;
+}
+
+.input-container {
+  position: relative;
+  margin: 1rem 0;
+}
+
+.input {
+  width: 100%;
+  outline: none;
+  border: 2px solid #fafafa;
+  background: none;
+  padding: 0.6rem 1.2rem;
+  color: #fff;
+  font-weight: 500;
+  font-size: 0.95rem;
+  letter-spacing: 0.5px;
+  border-radius: 25px;
+  transition: 0.3s;
+}
+
+textarea.input {
+  padding: 0.8rem 1.2rem;
+  min-height: 150px;
+  border-radius: 22px;
+  resize: none;
+  overflow-y: auto;
+}
+
+.input-container label {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+  padding: 0 0.4rem;
+  color: #fafafa;
+  font-size: 0.9rem;
+  font-weight: 400;
+  pointer-events: none;
+  z-index: 1000;
+  transition: 0.5s;
+}
+
+.input-container.textarea label {
+  top: 1rem;
+  transform: translateY(0);
+}
+
+.btn {
+  padding: 0.6rem 1.3rem;
+  background-color: #fff;
+  border: 2px solid #fafafa;
+  font-size: 0.95rem;
+  color: #586965;
+  line-height: 1;
+  border-radius: 25px;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
+  margin: 0;
+}
+
+.btn:hover {
+  background-color: transparent;
+  color: #fff;
+}
+
+.input-container span {
+  position: absolute;
+  top: 0;
+  left: 25px;
+  transform: translateY(-50%);
+  font-size: 0.8rem;
+  padding: 0 0.4rem;
+  color: transparent;
+  pointer-events: none;
+  z-index: 500;
+}
+
+.input-container span:before,
+.input-container span:after {
+  content: "";
+  position: absolute;
+  width: 10%;
+  opacity: 0;
+  transition: 0.3s;
+  height: 5px;
+  background-color: #586965;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.input-container span:before {
+  left: 50%;
+}
+
+.input-container span:after {
+  right: 50%;
+}
+
+.input-container.focus label {
+  top: 0;
+  transform: translateY(-50%);
+  left: 25px;
+  font-size: 0.8rem;
+}
+
+.input-container.focus span:before,
+.input-container.focus span:after {
+  width: 50%;
+  opacity: 1;
+}
+
+.contact-info {
+  padding: 2.3rem 2.2rem;
+  position: relative;
+}
+
+.contact-info .title {
+  color: #586965;
+}
+
+.text {
+  color: #333;
+  margin: 1.5rem 0 2rem 0;
+}
+
+.information {
+  display: flex;
+  color: #555;
+  margin: 0.7rem 0;
+  align-items: center;
+  font-size: 0.95rem;
+}
+
+.icon {
+  width: 28px;
+  margin-right: 0.7rem;
+}
+
+.social-media {
+  padding: 2rem 0 0 0;
+}
+
+.social-media p {
+  color: #333;
+}
+
+.social-icons {
+  display: flex;
+  margin-top: 0.5rem;
+}
+
+.social-icons a {
+  width: 35px;
+  height: 35px;
+  border-radius: 5px;
+  background: linear-gradient(45deg, #7a8784, #586965);
+  color: #fff;
+  text-align: center;
+  line-height: 35px;
+  margin-right: 0.5rem;
+  transition: 0.3s;
+}
+
+.social-icons a:hover {
+  transform: scale(1.05);
+}
+
+.contact-info:before {
+  content: "";
+  position: absolute;
+  width: 110px;
+  height: 100px;
+  border: 22px solid #97b5ae;
+  border-radius: 50%;
+  bottom: -77px;
+  right: 50px;
+  opacity: 0.3;
+}
+
+.big-circle {
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  background: linear-gradient(to bottom, #7f918d, #586965);
+  bottom: 50%;
+  right: 50%;
+  transform: translate(-40%, 38%);
+}
+
+.big-circle:after {
+  content: "";
+  position: absolute;
+  width: 360px;
+  height: 360px;
+  background-color: #fafafa;
+  border-radius: 50%;
+  top: calc(50% - 180px);
+  left: calc(50% - 180px);
+}
+
+.square {
+  position: absolute;
+  height: 400px;
+  top: 50%;
+  left: 50%;
+  transform: translate(181%, 11%);
+  opacity: 0.2;
+}
+
+@media (max-width: 850px) {
+  .form {
+    grid-template-columns: 1fr;
   }
-  
-  /* Create four equal columns that sits next to each other */
-  .column {
-	flex: 25%;
-	max-width: 33.3%;
-	padding: 0 4px;
+
+  .contact-info:before {
+    bottom: initial;
+    top: -75px;
+    right: 65px;
+    transform: scale(0.95);
   }
-  
-  .column img {
-	margin-top: 8px;
-	vertical-align: middle;
-	width: 100%;
-	filter: grayscale(1) brightness(0.5);
-	border-radius: 5px;
-	cursor: pointer;
-	transition: 0.3s linear;
+
+  .contact-form:before {
+    top: -13px;
+    left: initial;
+    right: 70px;
   }
-  .column img:hover {
-	filter: grayscale(0);
+
+  .square {
+    transform: translate(140%, 43%);
+    height: 350px;
   }
-  @media screen and (max-width: 800px) {
-	.column {
-	  flex: 50%;
-	  max-width: 50%;
-	}
+
+  .big-circle {
+    bottom: 75%;
+    transform: scale(0.9) translate(-40%, 30%);
+    right: 50%;
   }
-  
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-	.column {
-	  flex: 100%;
-	  max-width: 100%;
-	}
-	.column img {
-	  filter: grayscale(0) brightness(1);
-	}
+
+  .text {
+    margin: 1rem 0 1.5rem 0;
   }
-  @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
-#team {
-    background: #eee !important;
+
+  .social-media {
+    padding: 1.5rem 0 0 0;
+  }
 }
 
-.btn-primary:hover,
-.btn-primary:focus {
-    background-color: #849692;
-    border-color: #689c90;
-    box-shadow: none;
-    outline: none;
-}
+@media (max-width: 480px) {
+  .container {
+    padding: 1.5rem;
+  }
 
-.btn-primary {
-    color: #fff;
-    background-color: #586965;
-    border-color: #586965;
-}
+  .contact-info:before {
+    display: none;
+  }
 
-section {
-    padding: 60px 0;
-}
+  .square,
+  .big-circle {
+    display: none;
+  }
 
-section .section-title {
-    text-align: center;
-    color: #586965;
-    margin-bottom: 50px;
-    text-transform: uppercase;
-}
+  form,
+  .contact-info {
+    padding: 1.7rem 1.6rem;
+  }
 
-#team .card {
-    border: none;
-    background: #ffffff;
-}
+  .text,
+  .information,
+  .social-media p {
+    font-size: 0.8rem;
+  }
 
-.image-flip:hover .backside,
-.image-flip.hover .backside {
-    -webkit-transform: rotateY(0deg);
-    -moz-transform: rotateY(0deg);
-    -o-transform: rotateY(0deg);
-    -ms-transform: rotateY(0deg);
-    transform: rotateY(0deg);
-    border-radius: .25rem;
-}
+  .title {
+    font-size: 1.15rem;
+  }
 
-.image-flip:hover .frontside,
-.image-flip.hover .frontside {
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    -o-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-}
+  .social-icons a {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+  }
 
-.mainflip {
-    -webkit-transition: 1s;
-    -webkit-transform-style: preserve-3d;
-    -ms-transition: 1s;
-    -moz-transition: 1s;
-    -moz-transform: perspective(1000px);
-    -moz-transform-style: preserve-3d;
-    -ms-transform-style: preserve-3d;
-    transition: 1s;
-    transform-style: preserve-3d;
-    position: relative;
-}
+  .icon {
+    width: 23px;
+  }
 
-.frontside {
-    position: relative;
-    -webkit-transform: rotateY(0deg);
-    -ms-transform: rotateY(0deg);
-    z-index: 2;
-    margin-bottom: 30px;
-}
+  .input {
+    padding: 0.45rem 1.2rem;
+  }
 
-.backside {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: white;
-    -webkit-transform: rotateY(-180deg);
-    -moz-transform: rotateY(-180deg);
-    -o-transform: rotateY(-180deg);
-    -ms-transform: rotateY(-180deg);
-    transform: rotateY(-180deg);
-    -webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
-    -moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
-    box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
-}
-
-.frontside,
-.backside {
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -ms-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-transition: 1s;
-    -webkit-transform-style: preserve-3d;
-    -moz-transition: 1s;
-    -moz-transform-style: preserve-3d;
-    -o-transition: 1s;
-    -o-transform-style: preserve-3d;
-    -ms-transition: 1s;
-    -ms-transform-style: preserve-3d;
-    transition: 1s;
-    transform-style: preserve-3d;
-}
-
-.frontside .card,
-.backside .card {
-    min-height: 312px;
-}
-
-.backside .card a {
-    font-size: 18px;
-    color: #586965 !important;
-}
-
-.frontside .card .card-title,
-.backside .card .card-title {
-    color: #586965 !important;
-}
-
-.frontside .card .card-body img {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-}
-.section-padding{
-	padding: 30px 0;
-}
-.section-header{
-	margin-bottom: 50px;
-}
-.section-header h2{
-	color: #586965;
-	text-transform: uppercase;
-	font-weight: 600;
-}
-.single-services{
-	transition: -5s;
-	text-align: center;
-	height: 380px;
-	padding: 115px 50px;
-}
-.single-services .icon
-{
-	background-color: #fff;
-	border-radius: 50%;
-	box-shadow: 0 2px 20px rgba(0,0,0,0.4);
-	color: #000;
-	display: inline-block;
-	height: 90px;
-	width: 90px;
-	margin-bottom: 35px;
-}
-.single-services .icon i{
-	display: block;
-	font-size: 32px;
-	line-height: 90px;
-}
-.single-services .content{
-	height: 32px;;
-	transition: .5s;
-}
-.single-services .content h3{
-	font-size: 20px;
-	font-weight: 300;
-	line-height: 35px;
-	margin: 0;
-	text-transform: uppercase;
-}
-.single-services .content p{
-	color: #fff;
-	line-height: 29px;
-	margin: 27px 0 0;
-}
-.single-services:hover{
-	background-image: linear-gradient(to bottom, #586965 0%, #cacecd 100%);
-	padding: 60px 50px;
+  .btn {
+    padding: 0.45rem 1.2rem;
+  }
 }
